# Answers-for-course-Python-for-solving-practical-problems

./: .gitignore  1.4.4.py  1.4.5.py  1.4.6.py  2.1.2.py  2.2.2.py  2.3.2.py  2.3.3.py  2.3.4.py  2.4.2.py  3.1.3.py  3.2.2.py  3.3.2.py  3.4.2.py  README.md  pyproject.toml
