[tool.poetry]
name = "practical-python"
version = "0.1.0"
description = ""
authors = ["nlif-m <m.payunen@gmail.com>"]
readme = "README.md"
# packages = [{include = "."}]

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
