[tool.poetry]
name = "practical-python"
version = "0.1.0"
description = ""
authors = ["nlif-m <m.payunen@gmail.com>"]
readme = "README.md"
# packages = [{include = "."}]

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.2"
xlrd = "1.2.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.275"
black = "^23.3.0"
mypy = "^1.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
